# plugins_gitblit

./: BUCK  BUILD  README  README.md  WORKSPACE  external_plugin_deps.bzl  fix_gerrit_plugin.patch  pom.xml  project.config
gitblit/: BUILD.bazel
lib/: BUCK  BUILD
patches/: 0001-Bump-JGit-to-4.11.0.201803080745-r.93-gcbb2e65db.patch  0002-Ant-Add-buildGitblit-target.patch
src/main/java/com/googlesource/gerrit/plugins/gitblit/: GerritGitBlitContext.java  GerritWicketFilter.java  GitBlitDaggerModule.java  GitBlitInitStep.java  GitBlitModule.java  GitBlitServlet.java  GitBlitServletModule.java  GitBlitSettings.java  GitBlitTopMenu.java  GitBlitUrlsConfig.java  InitStepPlugin.java  NullPluginManager.java  Section.java  StaticHttpServletRequest.java  WrappedBranchGraphServlet.java  WrappedDownloadZipFilter.java  WrappedDownloadZipServlet.java  WrappedFederationServlet.java  WrappedGitFilter.java  WrappedGitServlet.java  WrappedLogoServlet.java  WrappedPagesFilter.java  WrappedPagesServlet.java  WrappedRpcFilter.java  WrappedRpcServlet.java  WrappedSyndicationFilter.java  WrappedSyndicationServlet.java
src/main/java/com/googlesource/gerrit/plugins/gitblit/app/: GerritGitBlit.java  GerritToGitBlitWebApp.java  GitBlitSettings.java  ReallyNullTicketService.java  StaticCodingStrategy.java
src/main/java/com/googlesource/gerrit/plugins/gitblit/auth/: GerritAuthFilter.java  GerritToGitBlitUserModel.java  GerritToGitBlitUserService.java
src/main/java/org/eclipse/jgit/storage/file/: FileRepository.java  WindowCache.java
src/main/resources/: gitblit.properties
src/main/resources/Documentation/: build.md  index.md
src/main/resources/com/googlesource/gerrit/plugins/gitblit/: gitblit-gerrit.properties  reference.properties
tools/: workspace-status.sh
